# Code-Navigator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
askcode/: __init__.py  callgraph.py  chunker.py  cli.py  index.py  lexical.py  llm.py  query.py  rerank.py  store.py  treesitter.py
codenavigator/: __init__.py  __main__.py  callgraph.py  chunker.py  cli.py  embedder.py  eval.py  gitdiff.py  index.py  llm.py  mcp_server.py  query.py  treesitter.py
demo/: Dockerfile  README.md  demo.tape
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html  main.js  styles.css
docs/: README.md
evals/: smart-learning-advisor.jsonl
scripts/: calibrate.py
tests/: test_mcp.py  test_pipeline.py
